--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ face-recognition==1.3.0
 face-recognition-models==0.3.0
 Flask==1.1.1
 Flask-Cors==3.0.8
+gunicorn==20.0.4
 idna==2.9
 imutils==0.5.3
 isort==4.3.21
