--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ certifi==2019.11.28
 chardet==3.0.4
 click==7.1.1
 colorama==0.4.3
+cmake
 dlib==19.7.0
 face-recognition==1.3.0
 face-recognition-models==0.3.0
