--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@ astroid==2.3.3
 certifi==2019.11.28
 chardet==3.0.4
 click==7.1.1
+cmake==3.17.1
 colorama==0.4.3
-cmake
 dlib==19.7.0
 face-recognition==1.3.0
 face-recognition-models==0.3.0
